/*
 * Copyright 2018 Loopring Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
package org.loopring.lightcone.proto;

import "core_data.proto";

// For ABC/XYZ market, ABC is secondary, XYZ is primary
message MarketId {
    string primary = 1;
    string secondary = 2;
}

message Orderbook {
    message Get {
        int32 level = 2;
        int32 size = 1;
        MarketId market_id = 3;
    }

    message Item {
        string price = 1;
        string amount = 2;
        string total = 3;
    }

    double latestPrice = 1;
    repeated Item sells = 2;
    repeated Item buys = 3;
}

message OrderbookUpdate {
    message Slot {
        int64 slot = 1;
        double amount = 2;
        double total = 3;
    }

    repeated Slot sells = 1;
    repeated Slot buys = 2;
    double last_price = 3;
    MarketId market_id = 4;
}